Initialize Crashpad to catch app shim crashes.

Bug: 893821
Change-Id: Ic2ff92577d35250fbe773ff6b80918da33d57155
Reviewed-on: https://chromium-review.googlesource.com/c/1365955
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Mark Mentovai <mark@chromium.org>
Commit-Queue: Sidney San Martín <sdy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#615629}
Former-commit-id: 1c9f89a06fba506b4efdb40fa3407976012a550a