chrome/app/chrome_crash_reporter_client.cc
@@ -42,6 +42,11 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "components/version_info/version_info.h"
 #endif
 
+void ChromeCrashReporterClient::Create() {
+  static base::NoDestructor<ChromeCrashReporterClient> crash_client;
+  crash_reporter::SetCrashReporterClient(crash_client.get());
+}
+
 ChromeCrashReporterClient::ChromeCrashReporterClient() {}
 
 ChromeCrashReporterClient::~ChromeCrashReporterClient() {}
