chrome/app/chrome_crash_reporter_client.h
@@ -12,13 +12,13 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/compiler_specific.h"
 #include "base/macros.h"
+#include "base/no_destructor.h"
 #include "build/build_config.h"
 #include "components/crash/content/app/crash_reporter_client.h"
 
 class ChromeCrashReporterClient : public crash_reporter::CrashReporterClient {
  public:
-  ChromeCrashReporterClient();
-  ~ChromeCrashReporterClient() override;
+  static void Create();
 
   // crash_reporter::CrashReporterClient implementation.
 #if !defined(OS_MACOSX) && !defined(OS_ANDROID)
@@ -60,6 +60,11 @@ class ChromeCrashReporterClient : public crash_reporter::CrashReporterClient {
   bool EnableBreakpadForProcess(const std::string& process_type) override;
 
  private:
+  friend class base::NoDestructor<ChromeCrashReporterClient>;
+
+  ChromeCrashReporterClient();
+  ~ChromeCrashReporterClient() override;
+
   DISALLOW_COPY_AND_ASSIGN(ChromeCrashReporterClient);
 };
 
